# GChess

./: .gitignore  README.md  pyproject.toml
gchess/: manage.py
gchess/analysis/: api.py  services.py
gchess/ganalysis/: apps.py
gchess/gchess/: asgi.py  settings.py  urls.py  wsgi.py
